--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "keycloak-react",
+  "type": "commonjs",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -21,8 +22,11 @@
     "react-scripts": "^4.0.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.6",
     "axios": "^0.26.1",
-    "keycloak-js": "^17.0.0",
+    "keycloak-js": "^20.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
